apps/base/capacitor/capacitor.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capacitor
  labels:
    app.kubernetes.io/name: capacitor
